--- a/.github/workflows/sync-and-rebase-pr-from-fork.yml
+++ b/.github/workflows/sync-and-rebase-pr-from-fork.yml
@@ -56,5 +56,15 @@ jobs:
 
           existing_prs=$(gh pr list -H "$contribHeadRefName" --json number)
           if [[ "$existing_prs" = "[]" ]]; then
-            gh pr create --draft --base "$baseRefName" --head "$contribHeadRefName" --assignee "$headRepositoryOwnerLogin" --title "CI run for contributor PR #$PR_NUMBER" --body "## Description\nThis PR is created to run CI on the changes proposed in PR #$PR_NUMBER by @$headRepositoryOwnerLogin.\n\n**This PR should not be merged.**"
+            gh pr create
+              --draft \
+              --base "$baseRefName" \
+              --head "$contribHeadRefName" \
+              --assignee "$headRepositoryOwnerLogin" \
+              --title "CI run for contributor PR #$PR_NUMBER" \
+              --body \
+          "## Description
+          This PR is created to run CI on the changes proposed in PR #$PR_NUMBER by @$headRepositoryOwnerLogin.
+
+          **This PR should not be merged.**"
           fi
