--- a/components/brave_ads/core/public/BUILD.gn
+++ b/components/brave_ads/core/public/BUILD.gn
@@ -38,10 +38,12 @@ source_set("headers") {
     "database/database.h",
     "export.h",
     "flags/flags_util.h",
+    "history/ad_history_constants.h",
     "history/ad_history_filter_types.h",
     "history/ad_history_item_info.h",
     "history/ad_history_sort_types.h",
     "history/ad_history_value_util.h",
+    "history/site_history.h",
     "prefs/obsolete_pref_util.h",
     "prefs/pref_names.h",
     "prefs/pref_registry.h",
