--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -407,6 +407,7 @@ test("brave_unit_tests") {
       "//brave/browser/ui/webui/brave_wallet/wallet_common_ui_unittest.cc",
       "//brave/browser/ui/webui/settings/brave_wallet_handler_unittest.cc",
       "//brave/chromium_src/chrome/browser/devtools/url_constants_unittest.cc",
+      "//brave/chromium_src/chrome/browser/profiles/profile_attributes_entry_unittest.cc",
       "//brave/chromium_src/chrome/browser/profiles/profile_avatar_icon_util_unittest.cc",
       "//chrome/browser/push_messaging/push_messaging_app_identifier_unittest.cc",
       "//chrome/browser/push_messaging/push_messaging_notification_manager_unittest.cc",
