--- a/ios/browser/flags/BUILD.gn
+++ b/ios/browser/flags/BUILD.gn
@@ -18,6 +18,7 @@ source_set("flags") {
     "//brave/components/debounce/core/common",
     "//brave/components/ntp_background_images/browser",
     "//brave/components/skus/common",
+    "//brave/ios/browser/brave_wallet",
     "//brave/ios/browser/playlist",
     "//components/flags_ui",
   ]
