--- a/components/ai_chat/core/browser/BUILD.gn
+++ b/components/ai_chat/core/browser/BUILD.gn
@@ -32,6 +32,7 @@ static_library("browser") {
     "engine/engine_consumer_llama.h",
     "engine/engine_consumer_oai.cc",
     "engine/engine_consumer_oai.h",
+    "engine/engine_types.h",
     "engine/oai_api_client.cc",
     "engine/oai_api_client.h",
     "engine/remote_completion_client.cc",
