--- a/browser/resources/settings/sources.gni
+++ b/browser/resources/settings/sources.gni
@@ -92,6 +92,7 @@ brave_settings_non_web_component_files = [
   "brave_overrides/safety_check_passwords_child.ts",
   "brave_overrides/safety_hub_page.ts",
   "brave_overrides/search_page.ts",
+  "brave_overrides/search_engines_page.ts",
   "brave_overrides/security_page.ts",
   "brave_overrides/settings_menu.ts",
   "brave_overrides/settings_section.ts",
