--- a/android/java/AndroidManifest.xml
+++ b/android/java/AndroidManifest.xml
@@ -81,7 +81,7 @@
     tools:ignore="LockedOrientationActivity,DiscouragedApi"/>
 
 <activity
-    android:name="org.chromium.chrome.browser.vpn.activities.BraveVpnPlansActivity"
+    android:name="org.chromium.chrome.browser.vpn.activities.VpnPaywallActivity"
     android:theme="@style/Theme.Chromium.Activity"
     android:noHistory="true"
     android:launchMode="singleTask"
