--- a/tools/perf/configs/dashboard/smoke-brave.json5
+++ b/tools/perf/configs/dashboard/smoke-brave.json5
@@ -2,7 +2,7 @@
   "configurations": [{
     "dashboard-bot-name": "test-agent",
     "browser-type": "brave",
-    "profile": "brave-typical-win",
+    "profile": "brave-typical-mac",
     "extra-browser-args": ["--disable-features=CalculateNativeWinOcclusion"],
     "extra-benchmark-args": [],
     "save-artifacts": true,
@@ -23,18 +23,16 @@
       "stories": [
         "load:site:example:2023",
         "load:site:twitter:2023",
-        "load:site:imdb:2023",
-        "load:ntp:brave_news:2023",
+        "load:site:imdb:2024",
+        "load:ntp:brave_news:2024",
       ]
     },
     {
       "name": "system_health.memory_desktop",
       "pageset-repeat": 1,
       "stories": [
-        "load:site:example:2023",
-        "load:site:twitter:2023",
-        "load:site:imdb:2023",
-        "load:ntp:brave_news:2023",
+        "load:chrome:blank",
+        "load:media:youtube:2018",
       ]
     },
     {
