--- a/components/brave_extension/extension/brave_extension/manifest.json
+++ b/components/brave_extension/extension/brave_extension/manifest.json
@@ -33,17 +33,6 @@
   "content_scripts": [
     {
       "matches": [
-        "http://*/*",
-        "https://*/*"
-      ],
-      "js": [
-        "out/content_element_picker.bundle.js"
-      ],
-      "run_at": "document_start",
-      "all_frames": true
-    },
-    {
-      "matches": [
         "https://chrome.google.com/webstore/*",
         "https://chromewebstore.google.com/*"
       ],
@@ -71,6 +60,7 @@
     "chrome://favicon/*",
     "webRequestBlocking",
     "unlimitedStorage",
+    "scripting",
     "<all_urls>"
   ],
   "content_security_policy": "default-src 'self'; font-src 'self' data:; script-src 'self' 'wasm-eval'; style-src 'unsafe-inline'; img-src 'self' data: chrome://favicon/; connect-src * data: blob: filesystem:;",
