--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -326,6 +326,10 @@ test("brave_unit_tests") {
     deps += [ "//brave/browser/day_zero_browser_ui_expt:unit_tests" ]
   }
 
+  if (is_mac) {
+    deps += [ "//brave/components/update_client" ]
+  }
+
   if (enable_tor) {
     deps += [
       "//brave/browser/tor/test:unit_tests",
