add another pattern to catch things like `brave_tab_ui_sources.gni`

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -19,6 +19,7 @@ components/brave_component_updater/browser/local_data_files_observer.h @bridiver
 
 # sources.gni
 **/sources.gni @brave/sources-gni-reviewers
+**/*_sources.gni @brave/sources-gni-reviewers
 
 # Renderer code
 **/renderer/**/* @brave/renderer-reviewers
