--- a/components/cosmetic_filters/resources/data/BUILD.gn
+++ b/components/cosmetic_filters/resources/data/BUILD.gn
@@ -3,10 +3,17 @@ import("//tools/grit/grit_rule.gni")
 import("//tools/grit/repack.gni")
 
 transpile_web_ui("cosmetic_filters_resources") {
-  entry_points = [ [
-        "cosmetic_filters",
-        rebase_path("content_cosmetic.ts"),
-      ] ]
+  entry_points = [
+    [
+      "cosmetic_filters",
+      rebase_path("content_cosmetic.ts"),
+    ],
+    [
+      # TODO: move to brave/components/cosmetic_filter
+      "//brave/components/brave_extension/extension/brave_extension/content_element_picker.ts",
+      rebase_path("content_element_picker.ts"),
+    ],
+  ]
 
   resource_name = "cosmetic_filters"
 }
