--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -20,6 +20,7 @@ components/brave_component_updater/browser/local_data_files_observer.h @bridiver
 # sources.gni
 **/sources.gni @brave/sources-gni-reviewers
 **/*_sources.gni @brave/sources-gni-reviewers
+docs/gni_sources.md @brave/sources-gni-reviewers
 
 # Renderer code
 **/renderer/**/* @brave/renderer-reviewers
