--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -17,7 +17,7 @@ browser/brave_browser_process.h @bridiver
 components/brave_component_updater/browser/brave_component.h @bridiver @antonok-edm
 components/brave_component_updater/browser/local_data_files_observer.h @bridiver @antonok-edm
 
-# sources.gni
+# sources.gni - see docs/gni_sources.md
 **/sources.gni @brave/sources-gni-reviewers
 **/*_sources.gni @brave/sources-gni-reviewers
 docs/gni_sources.md @brave/sources-gni-reviewers
